--- a/home.html
+++ b/home.html
@@ -143,6 +143,67 @@
           </div>
         </div>
       </div>
+      <div class="nav-three">
+        <div class="three-men">
+          <img src="./images/men shopping.jpeg" alt="shopping" />
+          <h6>MEN</h6>
+          <div class="men-drop hidden">
+            <p>Summer T-Shirts</p>
+            <p>Formal Shirts</p>
+            <p>Jeans</p>
+            <p>Shorts</p>
+            <p>Gym Suits</p>
+            <p>Sweat Shirts</p>
+            <p>Cargos & Trousers</p>
+          </div>
+        </div>
+        <div class="three-kid">
+          <img src="./images/kids shopping.jpg" alt="shopping" />
+          <h6>KIDS</h6>
+          <div class="kid-drop hidden">
+            <p>Babies</p>
+            <p>Clothing Set</p>
+            <p>Baby Bedding</p>
+            <p>Best Sellers</p>
+            <p>Frocks</p>
+            <p>Toys</p>
+          </div>
+        </div>
+        <div class="three-women">
+          <img src="./images/women shopping.jpg" alt="shopping" />
+          <h6>WOMEN</h6>
+          <div class="women-drop hidden">
+            <p>Tops</p>
+            <p>T-Shirts</p>
+            <p>JumpSuits</p>
+            <p>Gown</p>
+            <p>New Trends</p>
+          </div>
+        </div>
+        <div class="three-access">
+          <img src="./images/accessories.jpg" alt="accesories" />
+          <h6>ACCESORIES</h6>
+          <div class="access-drop hidden">
+            <p>Makeup Kits</p>
+            <p>Watches</p>
+            <p>Mens Fashion</p>
+            <p>Belts</p>
+            <p>Wallets</p>
+            <p>Sun Glasses</p>
+          </div>
+        </div>
+        <div class="three-foots">
+          <img src="./images/bags and footwear.avif" alt="bags" />
+          <h6>BAGS</h6>
+          <div class="foot-drop hidden">
+            <p>Womens Sandals</p>
+            <p>Kids Footwear</p>
+            <p>Mens Shoes</p>
+            <p>Flipflops</p>
+            <p>Boots</p>
+          </div>
+        </div>
+      </div>
     </nav>
     <section class="sec-image">
       <div class="image-opt">
@@ -158,45 +219,6 @@
         <img src="./images/levis logo.png" alt="levis" />
         <img src="./images/louis logo.jpeg" alt="louis" />
         <img src="./images/one8 logo.jpeg" alt="one8" />
-      </div>
-    </section>
-    <section class="sec-about">
-      <h1>We Provide Best Customer Experience</h1>
-      <div class="about-container">
-        <div class="cont-box">
-          <i class="fa-regular fa-circle-check"></i>
-          <h4>Only Genuine & Verified Products</h4>
-          <p>
-            All our products go through strict authenticity checks. We source
-            directly from official brand suppliers to ensure you always receive
-            original, premium-quality items.
-          </p>
-        </div>
-        <div class="cont-box">
-          <i class="fa-regular fa-face-smile"></i>
-          <h4>100% Satisfaction Guaranteed</h4>
-          <p>
-            We stand behind every product we sell. If something isn’t right, our
-            team is ready to assist you with quick exchanges, returns, or
-            support—your happiness is our priority.
-          </p>
-        </div>
-        <div class="cont-box">
-          <i class="fa-solid fa-broom"></i>
-          <h4>Something New Every Day!</h4>
-          <p>
-            From trending fashion to exclusive designs, we bring something new
-            for you every day.
-          </p>
-        </div>
-        <div class="cont-box">
-          <i class="fa-solid fa-truck-fast"></i>
-          <h4>Free & Fast Shipping, Always</h4>
-          <p>
-            Experience hassle-free shopping with quick delivery and no shipping
-            costs, every single time.
-          </p>
-        </div>
       </div>
     </section>
     <section class="sec-new">
@@ -254,6 +276,45 @@
             <i class="fa-solid fa-heart fa-2x react-icon"></i>
           </p>
           <p><button>ShopNow</button></p>
+        </div>
+      </div>
+    </section>
+    <section class="sec-about">
+      <h1>We Provide Best Customer Experience</h1>
+      <div class="about-container">
+        <div class="cont-box">
+          <i class="fa-regular fa-circle-check"></i>
+          <h4>Only Genuine & Verified Products</h4>
+          <p>
+            All our products go through strict authenticity checks. We source
+            directly from official brand suppliers to ensure you always receive
+            original, premium-quality items.
+          </p>
+        </div>
+        <div class="cont-box">
+          <i class="fa-regular fa-face-smile"></i>
+          <h4>100% Satisfaction Guaranteed</h4>
+          <p>
+            We stand behind every product we sell. If something isn’t right, our
+            team is ready to assist you with quick exchanges, returns, or
+            support—your happiness is our priority.
+          </p>
+        </div>
+        <div class="cont-box">
+          <i class="fa-solid fa-broom"></i>
+          <h4>Something New Every Day!</h4>
+          <p>
+            From trending fashion to exclusive designs, we bring something new
+            for you every day.
+          </p>
+        </div>
+        <div class="cont-box">
+          <i class="fa-solid fa-truck-fast"></i>
+          <h4>Free & Fast Shipping, Always</h4>
+          <p>
+            Experience hassle-free shopping with quick delivery and no shipping
+            costs, every single time.
+          </p>
         </div>
       </div>
     </section>
@@ -356,6 +417,10 @@
         </div>
       </div>
     </footer>
+    <!-- <div class="float">
+      <img src="./images/whatsapp logo.png" alt="whatsapp">
+      <img src="./images/instagram logo.webp" alt="instagram">
+    </div> -->
     <script src="./script.js"></script>
   </body>
 </html>
