--- a/home.html
+++ b/home.html
@@ -26,29 +26,16 @@
           <i class="fa-regular fa-camera"></i>
         </div>
         <div class="one-tags">
+          <p><a href="#">Outlets</a></p>
           <p><a href="#">Gift Cards</a></p>
           <p><a href="./collection.html">Collections</a></p>
           <p><a href="./contact.html">Contact Us</a></p>
         </div>
         <div class="one-fonts">
-          <div class="font-profile">
-            <i class="fa-solid fa-user"></i>
-            <div class="profile-toggle hidden">
-              <p>
-                Hello User
-                <span style="display: block"
-                  >To access your Nostra Account</span
-                >
-              </p>
-              <p>Sign In</p>
-              <p>My Orders</p>
-              <p style="border: none">
-                <a
-                  href="./index.html"
-                  style="text-decoration: none; color: rgb(131, 111, 0)"
-                  >LogOut</a
-                >
-              </p>
+          <div class="font-cart">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <div class="cart-toggle hidden">
+              <p>! Your Cart is empty !</p>
             </div>
           </div>
           <div class="font-menu">
@@ -68,10 +55,24 @@
               <p>Become a Supplier</p>
             </div>
           </div>
-          <div class="font-cart">
-            <i class="fa-solid fa-cart-shopping"></i>
-            <div class="cart-toggle hidden">
-              <p>! Your Cart is empty !</p>
+          <div class="font-profile">
+            <i class="fa-solid fa-user"></i>
+            <div class="profile-toggle hidden">
+              <p>
+                Hello User
+                <span style="display: block"
+                  >To access your Nostra Account</span
+                >
+              </p>
+              <p>Sign In</p>
+              <p>My Orders</p>
+              <p style="border: none">
+                <a
+                  href="./index.html"
+                  style="text-decoration: none; color: rgb(131, 111, 0)"
+                  >LogOut</a
+                >
+              </p>
             </div>
           </div>
         </div>
